working on populating database with new cards

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,7 +20,7 @@
         <div class="offset-sm-3 col-sm-6">
             <h3>Card Management</h3>
             <hr>
-            <a href="/db/build">Build Database</a>
+            <a href="/dashboard/db/build">Build Database</a>
         </div>
     </div>
 </div>
