not found wokring

--- a/templates/view.html
+++ b/templates/view.html
@@ -16,8 +16,8 @@
 <body>
     {{if not .}}
         <div class="jumbotron text-center">
-            <h1>{{.Name}}</h1>
-            <p>{{.Series}} - {{.Set}} - {{.SetCode}}</p>
+            <h1>Not Found</h1>
+            <p>error! card is missing :(</p>
         </div>
     {{else}}
         <div class="jumbotron text-center">
