--- a/templates/view.html
+++ b/templates/view.html
@@ -1,51 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {{if not .}}
-        <title>Not Found</title>
-    {{else}}
-        <title>Cards</title>
-    {{end}}
+    <title>Cards</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 
-{{/*https://godoc.org/github.com/astaxie/beego/utils/pagination*/}}
-    {{range .Cards}}
-        {{if not .}}
-            <div class="jumbotron text-center">
-                <h1>{{.Name}}</h1>
-                <p>{{.Series}} - {{.Set}} - {{.SetCode}}</p>
-            </div>
-            <div class="container">
-                <div style="text-align: center" class="row">
-                    <div class="col-sm-2"></div>
-                    <div class="col-sm-8">
-                        <img style="max-height: 100%; max-width: 100%" src="" alt="Not Found"/>
+<div id="carousel" class="carousel slide" style="align-content: center" data-ride="carousel">
+
+{{/*     carousel indicators */}}
+        <ul class="carousel-indicators">
+            {{range $index, $card := .Cards}}
+                {{if (eq $index 0)}}
+                    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                {{else}}
+                    <li data-target="#carousel" data-slide-to="{{$index}}"></li>
+                {{end}}
+            {{end}}
+        </ul>
+
+{{/*     carousel items */}}
+    <div class="carousel-inner">
+        {{range $index, $card := .Cards}}
+            {{if (eq $index 0)}}
+                <div class="carousel-item active text-center">
+                    <div class="jumbotron jumbotron-fluid text-center">
+                        <div class="container">
+                            <h1 class="display-4">{{ $card.Name }}</h1>
+                            <p class="lead">{{$card.Series}} / {{$card.Set}} / {{$card.SetCode}}</p>
+                        </div>
                     </div>
-                    <div class="col-sm-2"></div>
+                    <img src="{{ $card.ImageURLHiRes }}" alt="card" width=75% height=75%>
                 </div>
-            </div>
-        {{else}}
-            <div class="jumbotron text-center">
-                <h1>{{.Name}}</h1>
-                <p>{{.Series}} - {{.Set}} - {{.SetCode}}</p>
-            </div>
-            <div class="container">
-                <div style="text-align: center" class="row">
-                    <div class="col-sm-2"></div>
-                    <div class="col-sm-8">
-                        <img style="max-height: 100%; max-width: 100%" src="{{.ImageURLHiRes}}" alt="{{.Name}}"/>
+            {{else}}
+                <div class="carousel-item text-center">
+                    <div class="jumbotron jumbotron-fluid text-center">
+                        <div class="container">
+                            <h1 class="display-4">{{ $card.Name }}</h1>
+                            <p class="lead">{{$card.Series}} / {{$card.Set}} / {{$card.SetCode}}</p>
+                        </div>
                     </div>
-                    <div class="col-sm-2"></div>
+                    <img src="{{ $card.ImageURLHiRes }}" alt="card" width=75% height=75%>
                 </div>
-            </div>
+            {{end}}
         {{end}}
-    {{end}}
+    </div>
+
+{{/*     next and previous buttons */}}
+    <a class="carousel-control-prev" href="#carousel" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a class="carousel-control-next" href="#carousel" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </a>
+</div>
 </body>
 </html>
